DCS-58 Apply location list filtering on 'new incident' page: Add AGENCY_INTERNAL_LOCATION to 'LEI' that are representative of locations where a use of force incident might occur.